Bug 93659 - Tonga glamor errors logged since mesa: make KHR_debug output independent of context creation flags
Summary: Tonga glamor errors logged since mesa: make KHR_debug output independent of c...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/glamor (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-10 23:10 UTC by Andy Furniss
Modified: 2016-01-19 21:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log (28.34 KB, text/plain)
2016-01-10 23:10 UTC, Andy Furniss
no flags Details

Description Andy Furniss 2016-01-10 23:10:11 UTC
Can't notice any ill effects, but since -

commit 2123bfcc9c8b375ba46bb59d493ddeac1b7291a6
Author: Nicolai Hähnle <nicolai.haehnle@amd.com>
Date:   Mon Jan 4 17:31:05 2016 -0500

    st/mesa: make KHR_debug output independent of context creation flags (v2)
    
    Instead, keep track of GL_DEBUG_OUTPUT and (un)install the pipe_debug_callback
    accordingly. Hardware drivers can still use the absence of the callback to
    skip more expensive operations in the normal case, and users can no longer be
    surprised by the need to set the debug flag at context creation time.
    
    v2:
    - re-add the proper initialization of debug contexts (Ilia Mirkin)
    - silence a potential warning (Ilia Mirkin)


I am getting some errors logged by xorg/glamor

[   188.568] (EE) glamor0: GL error: Shader Stats: SGPRS: 80 VGPRS: 4 Code Size: 88 LDS: 0 Scratch: 0
[   188.635] (EE) glamor0: GL error: Shader Stats: SGPRS: 80 VGPRS: 8 Code Size: 196 LDS: 0 Scratch: 0
Comment 1 Andy Furniss 2016-01-10 23:10:49 UTC
Created attachment 120940 [details]
xorg log
Comment 2 Alex Deucher 2016-01-11 02:51:40 UTC
Fixed in this patch:
http://lists.x.org/archives/xorg-devel/2016-January/048460.html
Comment 3 Eric Anholt 2016-01-19 20:50:41 UTC
commit 1db6de7b6a6ee240eb50a13fe1fa1e135d7cb93b
Author: Michel Dänzer <michel.daenzer@amd.com>
Date:   Tue Jan 12 15:42:47 2016 +0900

    glamor: Disable debugging messages other than GL API errors
Comment 4 Andy Furniss 2016-01-19 21:45:19 UTC
Is it going into server-1.18-branch?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.